# inventory

./: .gitignore  README.md  main.py  pyproject.toml
data_schemas/: asset_schemas.py  transfer_schemas.py  user_schemas.py
db/: db_man.py
db/models/: asset_model.py  asset_models.py  user_model.py
db/repositories/: asset_repo.py  transfer_repo.py  user_repo.py
services/: user_services.py
ui/: login_view.py  main_view.py  table_comp.py
